# rust-web

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.prod.yml  docker-compose.yml  questions.json  request.http
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-test/: Cargo.toml
integration-test/src/: main.rs
migrations/: 20241203113707_questions_table.up.sql  20241204074526_alter_answers_table.down.sql  20241204074526_alter_answers_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: pagination.rs
