[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
