[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# local dependencies
mock-server = { path = "mock-server", version = " 0.1.0" }
handle-errors = { path = "handle-errors", version = "0.1.0" }

# external dependencies
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
dotenv = "0.15.0"
rand = "0.8"
rust-argon2 = "2.0"
paseto = "2.0"
chrono = "0.4.19"
clap = { version = "4.5", features = ["derive"] }
proc-macro2 = "1.0"
openssl = { version = "0.10.32", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"
