[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
playground = { path = "../", version = "0.1.0" }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
